@@ -804,6 +804,11 @@ listed as operand type in the table.
          {byte string}
          {Convert operand to MIME base64}
 
+\lineiv{bz2_codec}
+         {bz2}
+         {byte string}
+         {Compress the operand using bz2}
+
 \lineiv{hex_codec}
          {hex}
          {byte string}
